# prosoc

./: .gitignore  LICENSE  PROMPTS.md  README.md  current_prompts.py  environment.yml  pyproject.toml
.claude/skills/_shared/: pg_scenarios.md  principles.md
.claude/skills/new-scenario/: SKILL.md
.claude/skills/prosoc-scenario-audit/: SKILL.md
.claude/skills/prosoc-scenario-audit-all/: SKILL.md
.claude/skills/prosoc-scenario-new/: SKILL.md
.github/workflows/: charter.yml  lint.yml  tests.yml
.jules/: bolt.md  sentinel.md
envcheck/: mujoco_envcheck.py  mujoco_envcheck_run
experiments/2026_01/results/: summary.json
experiments/2026_01/scripts/: build_corpora.py  run_batch_audit.py
notebooks/: 01_charter_prototyping.ipynb
project/audits/: 2026-07-19_scenario_section_renderer_followup.md  README.md
project/design/proposals/: README.md
project/executions/: README.md
project/focus/: current_focus.md
prosoc/: charter.py
prosoc/auditor/: openai_client.py  orchestrator.py  prompts.py  schema.json  validator.py
prosoc/charter/: charter.md  charter.yml  distill.py  loader.py  runtime.py  schema.json
prosoc/constitutions/: README.md  distill.py  schema.json  template.md
prosoc/contexts/: distill.py  schema.json  template.md
prosoc/contexts/guidance_docent/: context.md  (+1 more)
prosoc/literate/: compiler.py  errors.py  utils.py
prosoc/scenarios/: AUDIT_SUMMARY.md  README.md  distill.py  frontal_approach_01.md  hallway_passing_01.md  pedestrian_overtaking_01.md  render_sections.py  robot_overtaking_01.md  scenario_template.md  schema.json  template.md  workflow.md
prosoc/tasks/: distill.py  schema.json  template.md
prosoc/utils/: paths.py  secrets.py
scratchworks/: README.md  expanded.txt  prompt.txt  prosocial.txt
scripts/: build  check  clean  develop  distill  envcheck  format  lint  publish  scenarios  tasks  test  update  validate
scripts/distill/: charter  constitutions  contexts  scenarios  tasks
scripts/validate/: card  charter
tests/: charter_test.py
tests/auditor/: openai_client_test.py  orchestrator_test.py  validator_test.py
tests/charter/: charter_test.py  distill_test.py  loader_test.py  runtime_test.py
tests/environment/: mujoco_test.py  mujoco_test_run
tests/literate/: compiler_test.py  utils_test.py
tests/scenarios/: distill_test.py  render_sections_test.py
tests/utils/: paths_test.py  secrets_test.py
(+155 files in other folders)
